<resources>
    <string name="app_name">homework_number_six</string>
    <string name="login">Login</string>
    <string name="email_or_nickname">Email or nickname</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="confirm_the_password">Confirm the password</string>
    <string name="please_enter_your_email_address">Please enter your email address.</string>
    <string name="please_enter_the_password">Please enter the password.</string>
    <string name="the_email_address_or_nickname_was_entered_incorrectly">The email address or nickname was entered incorrectly.</string>
    <string name="authorization_was_successful">Authorization was successful.</string>
    <string name="this_user_is_not_registered_or_the_password_is_incorrect">This user is not registered or the password is incorrect.</string>
    <string name="films">Films</string>
    <string name="please_enter_your_nickname">Please enter your nickname.</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="please_enter_your_last_name">Please enter your last name.</string>
    <string name="please_enter_the_password_again">Please enter the password again.</string>
    <string name="an_incorrectly_entered_email_address">An incorrectly entered email address.</string>
    <string name="the_nickname_should_contain_only_letters_and_numbers_3_20_characters">The nickname should contain only letters and numbers (3-20 characters).</string>
    <string name="the_name_must_contain_only_letters_2_50_characters">The name must contain only letters (2-50 characters).</string>
    <string name="the_last_name_must_contain_only_letters_2_50_characters">The last name must contain only letters (2-50 characters).</string>
    <string name="the_password_must_contain_at_least_6_characters_including_a_capital_letter_and_a_number">The password must contain at least 6 characters, including a capital letter and a number.</string>
    <string name="the_passwords_don_t_match">The passwords don\'t match.</string>
    <string name="the_user_with_this_email_address_is_already_registered">The user with this email address is already registered.</string>
    <string name="the_user_with_this_nickname_has_already_been_registered">The user with this nickname has already been registered.</string>
    <string name="registration_was_successful">Registration was successful.</string>
    <string name="exit">Exit</string>
    <string name="main">Main</string>
    <string name="settings">Settings</string>
    <string name="movie_title">Movie title</string>
    <string name="release_date">Release date</string>
    <string name="rating_0_10">Rating (0-10)</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="please_fill_in_all_required_fields">Please fill in all required fields.</string>
    <string name="the_rating_must_be_between_0_and_10">The rating must be between 0 and 10.</string>
    <string name="your_movies">Your movies</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="_0_0">0.0</string>
    <string name="description_">Description:</string>
    <string name="rating">Rating:</string>
    <string name="american_film">American film...</string>
    <string name="release_date_">Release date:</string>
    <string name="addfilmbottomsheet">AddFilmBottomSheet</string>
    <string name="fill_in_all_fields">Fill in all fields.</string>
    <string name="confirm_the_action">Confirm the action</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="account_deleted">Account deleted</string>
    <string name="cancel">Cancel</string>
    <string name="the_passwords_do_not_match">The passwords do not match.</string>
    <string name="data_updated_successfully">Data updated successfully.</string>
    <string name="delete">Delete</string>
    <string name="nickname_cannot_be_empty">Nickname cannot be empty.</string>
    <string name="the_nickname_must_contain_only_letters_and_numbers_3_20_characters">The nickname must contain only letters and numbers (3-20 characters).</string>
    <string name="this_nickname_is_already_in_use">This nickname is already in use.</string>
    <string name="nickname_successfully_updated">Nickname successfully updated.</string>
    <string name="email_cannot_be_empty">Email cannot be empty.</string>
    <string name="please_enter_a_valid_email">Please enter a valid email.</string>
    <string name="this_email_is_already_registered">This email is already registered.</string>
    <string name="email_updated_successfully">Email updated successfully.</string>
    <string name="the_new_password_must_contain_at_least_6_characters_including_a_capital_letter_and_a_number">The new password must contain at least 6 characters, including a capital letter and a number.</string>
    <string name="the_current_password_is_incorrect">The current password is incorrect.</string>
    <string name="password_updated_successfully">Password updated successfully.</string>
    <string name="save_nickname">Save nickname</string>
    <string name="save_email">Save email</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save_password">Save password</string>
    <string name="delete_account">Delete account</string>
</resources>