<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="#FFFFFF"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">
        <TextView
            android:id="@+id/textViewFilmName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textViewReleaseDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date_"
            app:layout_constraintTop_toBottomOf="@id/textViewFilmName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textViewReleaseDate"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:id="@+id/textViewReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yyyy_mm_dd"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/textViewFilmName"
            app:layout_constraintStart_toEndOf="@id/textViewReleaseDateTitle"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/textViewRatingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            app:layout_constraintTop_toBottomOf="@id/textViewReleaseDateTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textViewRating"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:id="@+id/textViewRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_0_0"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/textViewReleaseDate"
            app:layout_constraintStart_toEndOf="@id/textViewRatingTitle"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/textViewDescriptorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_"
            app:layout_constraintTop_toBottomOf="@id/textViewRatingTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textViewDescriptor"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:id="@+id/textViewDescriptor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/american_film"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/textViewRating"
            app:layout_constraintStart_toEndOf="@id/textViewDescriptorTitle"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>