<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutFilmName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/movie_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextFilmName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutReleaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/release_date"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutFilmName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/rating_0_10"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutReleaseDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDescriptor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutRating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDescriptor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:backgroundTint="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutDescriptor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>